src/objects/Tournament__c.object
<CustomObject>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <picklist>
            <picklistValues>
                <fullName>1 x 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 x 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Upcoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Round Robin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Elimination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double Elimination</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Tournament</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tournament Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tournaments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>